# agent-guard

./: Dockerfile  README.md  pyproject.toml  render.yaml  server.json  smithery.yaml
agent_guard/: __init__.py  _selftest_webscan.py  asgi.py  bench.py  checks.py  corpus_external.py  efficacy.json  efficacy.py  mcp_server.py  receipt.py  redteam.py  registry.py  session.py  webscan.py
tests/: test_checks.py  test_session.py
